--- a/paper.tex
+++ b/paper.tex
@@ -1,5 +1,6 @@
 \documentclass[10pt, conference]{IEEEtran}
 
+\newcommand{\ignore}[1]{}
 
 
 % *** MISC UTILITY PACKAGES ***
@@ -240,17 +241,22 @@
 %
 % paper title
 % can use linebreaks \\ within to get better formatting as desired
-\title{Seneca: Model Optimization as a service by Serverless}
+\title{Seneca: Leveraging Serverless for Low Cost Hyperparameter Search for Machine Learning Models}
 
 
 % author names and affiliations
 % use a multiple column layout for up to two different
 % affiliations
 
-\author{\IEEEauthorblockN{Michael Zhang, Chandra Krintz, Rich Wolski}
-\IEEEauthorblockA{Dept. of Computer Science \\
-Univeristy of California, Santa Barbara\\
-\{lebo, ckrintz, rich\}@cs.ucsb.edu}
+%\author{\IEEEauthorblockN{Michael Zhang, Chandra Krintz, Rich Wolski, Markus Mock}
+%\IEEEauthorblockA{Dept. of Computer Science \\
+%University of California, Santa Barbara\\
+%\{lebo, ckrintz, rich\}@cs.ucsb.edu}
+%}
+\author{\IEEEauthorblockN{Blind Review}\\
+\IEEEauthorblockA{Blind Review \\
+Blind Review\\
+\{blind\}@blind.blind.blind}
 }
 
 % conference papers do not typically use \thanks and this command
@@ -313,9 +319,9 @@ Serverless computing; Model optimization; Hyperparameters tuning
 \label{sec:intro}
 \input{intro}
 
-\section{Background}
-\label{sec:background}
-\input{background}
+%\section{Background}
+%\label{sec:background}
+%\input{background}
 
 \section{Seneca}
 \label{sec:seneca}
